YAMLs/pulis-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-06-17T09:10:40Z"
  labels:
    task: pulis
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:task: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":5000,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:task: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: agent
    operation: Update
    time: "2022-06-17T09:13:07Z"
  name: pulis-service
  namespace: default
  resourceVersion: "70616567"
  uid: 4aabe798-5bd9-434c-ab1e-afbd6482cd50
spec:
  clusterIP: 10.43.112.250
  clusterIPs:
  - 10.43.112.250
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    task: pulis
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
